syntax = "proto3";
package protos;
option go_package="pkg/proto";
import "google/api/annotations.proto";
import "utils.proto";

// Customer
message Customer {
  int32 id = 1;
  string name = 2;
  string state = 3;
}

// List of customers
message CustomerList {
  repeated Customer customer = 1;
}

// Customer Request
message CustomerReq {
  Customer customer = 1;
}

service Customers {
  // Returns all Customers
  rpc GetAllCustomers(GetReq) returns (CustomerList) {
    option (google.api.http) = {
      get: "/v1/customers"
    };
  }

  // Returns Customer of specific ID
  rpc GetCustomer(CustomerReq) returns (Customer) {
    option (google.api.http) = {
      get: "/v1/customers/{customer.id}"
    };
  }

  // Creates Customer of given ID in the db
  rpc PutCustomer(CustomerReq) returns (PostRes) {
    option (google.api.http) = {
      post: "/v1/customers/{customer.id}",
      body: "customer"
    };
  }
}